src/test/deca/context/valid/120_classeParams.deca
// Description:
//    Programme minimaliste: une classe et un Main vérifiant l'index des paramètres.
//
// Résultats:
//	12.0
//
// Historique:
//    cree le 01/01/2022

class A {
	float f(int a, float b, boolean c) {
		return 2*b;
	}
}

{
	A a = new A();
	print(a.f(5, 6.0, true));
}
